修改数据库参数

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 oracle.driver=com.p6spy.engine.spy.P6SpyDriver
-oracle.url=jdbc:p6spy:mysql://localhost:3306/ghca?serverTimezone=Asia/Shanghai
+oracle.url=jdbc:p6spy:mysql://192.168.2.202:3306/ghca2?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true
 oracle.username=root
-oracle.password=123456
+oracle.password=root
